improved NDEFMessage reading, I had an issue where the encryption was writing the same byte as the terminator TLV, so I had to use the payload length to read until the end

--- a/NFCTicketValidator.csproj
+++ b/NFCTicketValidator.csproj
@@ -129,6 +129,7 @@
     <Compile Include="lib\api\ndef\NDEFPayload.cs" />
     <Compile Include="lib\api\ndef\NDEFRecord.cs" />
     <Compile Include="lib\api\ndef\NDEFRecordType.cs" />
+    <Compile Include="lib\api\ndef\NDEFStreamReader.cs" />
     <Compile Include="lib\api\ndef\recordtypes\RTDText.cs" />
     <Compile Include="lib\api\ndef\TLVBlock.cs" />
     <Compile Include="lib\api\ndef\tlvtypes\NDEFMessage.cs" />
