--- a/NFCTicketValidator.csproj
+++ b/NFCTicketValidator.csproj
@@ -142,6 +142,7 @@
     <Compile Include="lib\api\Utility.cs" />
     <Compile Include="lib\api\Winscard.cs" />
     <Compile Include="lib\ticketing\encryption\TicketEncryption.cs" />
+    <Compile Include="lib\ticketing\ValidatorLocation.cs" />
     <Compile Include="lib\ticketing\SmartTicket.cs" />
     <Compile Include="lib\ticketing\TicketingService.cs" />
     <Compile Include="MainPage.xaml.cs">
