--- a/NFCTicketValidator.csproj
+++ b/NFCTicketValidator.csproj
@@ -146,6 +146,7 @@
     <Compile Include="lib\ticketing\IValidatorLocation.cs" />
     <Compile Include="lib\ticketing\SmartTicket.cs" />
     <Compile Include="lib\ticketing\storage\LocalDBStorage.cs" />
+    <Compile Include="lib\ticketing\storage\TicketValidation.cs" />
     <Compile Include="lib\ticketing\TicketingService.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
