--- a/NFCTicketValidator.csproj
+++ b/NFCTicketValidator.csproj
@@ -142,11 +142,12 @@
     <Compile Include="lib\api\Utility.cs" />
     <Compile Include="lib\api\Winscard.cs" />
     <Compile Include="lib\ticketing\encryption\TicketEncryption.cs" />
+    <Compile Include="lib\ticketing\orm\CreditTransaction.cs" />
     <Compile Include="lib\ticketing\storage\IValidationStorage.cs" />
     <Compile Include="lib\ticketing\IValidatorLocation.cs" />
-    <Compile Include="lib\ticketing\SmartTicket.cs" />
+    <Compile Include="lib\ticketing\orm\SmartTicket.cs" />
     <Compile Include="lib\ticketing\storage\LocalDBStorage.cs" />
-    <Compile Include="lib\ticketing\storage\TicketValidation.cs" />
+    <Compile Include="lib\ticketing\orm\TicketValidation.cs" />
     <Compile Include="lib\ticketing\TicketingService.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -189,6 +190,7 @@
       <Version>5.0.1</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
