--- a/NFCTicketValidator.csproj
+++ b/NFCTicketValidator.csproj
@@ -145,7 +145,7 @@
     <Compile Include="lib\ticketing\orm\CreditTransaction.cs" />
     <Compile Include="lib\ticketing\storage\IValidationStorage.cs" />
     <Compile Include="lib\ticketing\IValidatorLocation.cs" />
-    <Compile Include="lib\ticketing\orm\SmartTicket.cs" />
+    <Compile Include="lib\ticketing\orm\EncryptableSmartTicket.cs" />
     <Compile Include="lib\ticketing\storage\LocalDBStorage.cs" />
     <Compile Include="lib\ticketing\orm\TicketValidation.cs" />
     <Compile Include="lib\ticketing\TicketingService.cs" />
